# contact_implicit_mpc

./: CMakeLists.txt  build_and_run.sh  package.xml
Dockerfiles/: Dockerfile.justin
config/: allegro_setup.yaml  box_15cm_hydro.sdf  spinner.yaml
notebooks/: multibody_autodiff_tutorial.ipynb  spinner_contact_complicit.ipynb  spinner_mpc.ipynb
sdf/: allegro_hand.sdf  jaco_nub.sdf
src/: main.cpp
src/examples/: allegro_setup_main.cpp
